# MA

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  index.html  package-lock.json  package.json  story.txt  test.txt  tmp_test.txt  tsconfig.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.ma/: ma.db
.march/: march.db
crates/ma-core/: Cargo.toml
crates/ma-core/src/: agent.rs  agents.rs  config.rs  context.rs  lib.rs  main.rs  model_capabilities.json  model_capabilities.rs  paths.rs  provider.rs  settings.rs  skills.rs  storage.rs  tools.rs  ui.rs  watcher.rs
crates/ma-core/src/agent/: editing.rs  prompting.rs  runner.rs  shells.rs  tool_calls.rs
crates/ma-core/src/provider/: delivery.rs  messages.rs  title.rs  transport.rs  wire.rs
crates/ma-core/src/storage/: codec.rs  persist.rs  tasks.rs
crates/ma-core/src/ui/: backend.rs  provider.rs  util.rs  view.rs  workspace.rs
crates/march-core/: Cargo.toml
crates/march-core/src/: agent.rs  agents.rs  context.rs  diagnostics.rs  lib.rs  main.rs  memory.rs  paths.rs  provider.rs  settings.rs  skills.rs  storage.rs  tools.rs  ui.rs  watcher.rs
crates/march-core/src/agent/: editing.rs  file_diffs.rs  prompting.rs  runner.rs  runtime_views.rs  scopes.rs  session.rs  shells.rs  tool_calls.rs
crates/march-core/src/memory/: manager.rs  mod.rs  search.rs  storage.rs  tests.rs  types.rs
crates/march-core/src/provider/: delivery.rs  execution.rs  messages.rs  probe.rs  transport.rs  wire.rs
crates/march-core/src/provider/wire/: anthropic.rs  gemini.rs  openai.rs  shared.rs
crates/march-core/src/settings/: agents.rs  migrations.rs  models.rs  normalize.rs  providers.rs  types.rs
crates/march-core/src/storage/: codec.rs  persist.rs  tasks.rs  timeline.rs
crates/march-core/src/ui/: backend.rs  provider.rs  util.rs  view.rs  workspace.rs
crates/march-core/src/ui/backend/: messaging.rs  settings.rs  workspace.rs
crates/march-core/src/ui/types/: events.rs  mod.rs  provider.rs  requests.rs  runtime.rs
design/: DESIGN.md  INDEX.md  agents-teams.md  agents.md  browser.md  chat-runtime-改进方案.md  config.md  context.md  images.md  lsp.md  march-md.md  memory.md  provider-core.md  provider-model-refactor.md  provider.md  reasoning.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+169 files in other folders)
