[package]
name = "march-ui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "march_ui_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
march = { package = "march-core", path = "../crates/march-core" }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
url = "2.5"
webbrowser = "1.0"
