[package]
name = "ma-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "ma"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
encoding_rs = "0.8"
futures-util = "0.3"
genai = "0.5.3"
indexmap = "2.11"
lazy_static = "1.5"
notify = "8.2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
toml = "0.9"
