[package]
name = "march-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "march"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
encoding_rs = "0.8"
futures-util = "0.3"
eventsource-stream = "0.2"
indexmap = "2.11"
lazy_static = "1.5"
notify = "8.2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
toml = "0.9"
